--- a/polishCheckers.html
+++ b/polishCheckers.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>HTML5 Checkers</title>
+  <title>Polish Checkers</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.png" type="image/x-icon">
-  <script src="script.js"></script>
+  <script src="checkersPolish.js"></script>
 </head>
 <body>
   <div class="column">
