added instructons page

--- a/polishCheckers.html
+++ b/polishCheckers.html
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="column">
-    <div id="board">
+    <div id="polishBoard">
       <div class="tiles"></div>
       <div class="pieces">
         <div class="player1pieces">
