--- a/home.html
+++ b/home.html
@@ -2,17 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Homepage</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="style.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.png" type="image/x-icon" />
-    <!-- <script src='main.js'></script> -->
   </head>
   <body>
+    <nav>
+      <a href="login.html">Login</a>
+      <a href="signup.html">Sign up</a>
+      <a href="instructions.html">Instructions</a>
+    </nav>
     <div class="stats">
       <p>Welcome to Checkers</p>
       <p>Choose your Gamemode</p>
