--- a/home.html
+++ b/home.html
@@ -27,6 +27,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Play Now</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="instructions.html">Instructions</a>
+              </li>
             </ul>
             <form class="d-flex">
             <button class="btn btn-outline-danger" type="submit"  onclick="signOut()">Sign Out</button>
